<resources>
    <string name="app_name">Handy inVenty</string>
    <string name="empty_text">Your Inventory is Empty!</string>
    <string name="empty_text_2">Please add items by pressing plus!</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="add_photo">Click to add photo</string>
    <string name="change_photo">Click to change photo</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="delete_all_products">Delete All Products</string>
    <string name="add_product_title">Add Product</string>
    <string name="edit_product_title">Edit Product</string>
    <string name="unsaved_changes_message">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="delete_dialog_message">Are you sure of deleting this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="error_saving_prod">Error when saving product</string>
    <string name="prod_saved">Product has been saved</string>
    <string name="editor_delete_product_successful">Product has been deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="intentType">image/*</string>
    <string name="selectPicture">Select Picture</string>
    <string name="productNameReq">Product name is required</string>
    <string name="productPicReq">Product picture is required</string>
    <string name="quantityReq">Product quantity is required</string>
    <string name="dummyDataName">SSD</string>
    <string name="dummyDataPrice">120</string>
    <string name="dummyDataPicUri">android.resource://com.example.android.myinventory/drawable/ssd</string>
    <string name="dummyDataSupplierName">AMD</string>
    <string name="dummyDataSupplierEmail">dummyamd@amd.com</string>
    <string name="hintName">Name</string>
    <string name="hintPrice">Price</string>
    <string name="currency">€</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="availableProduct">pieces available</string>
    <string name="orderMore">Order More</string>
    <string name="newOrder">New Order</string>
    <string name="supplierName">Supplier Name</string>
    <string name="supplierEmail">Supplier E-mail</string>
    <string name="hintSupplierName">Supplier Name</string>
    <string name="hintSupplierEmail">supplier@sample.com</string>
    <string name="supplierNameReq">Supplier name required</string>
    <string name="supplierEmailReq">Supplier email required</string>
    <string name="productPriceReq">Product price is needed to input</string>
    <string name="soldOut">Item sold out</string>
    <string name="noLessQuantity">The quantity cannot be less </string>
</resources>
