<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/general_margin"
    android:orientation="vertical"
    tools:context="com.example.android.myinventory.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/product_picture"
            style="@style/AddImage"
            android:src="@drawable/add_image"></ImageView>

        <TextView
            android:id="@+id/add_photo_text"
            style="@style/AddImageText" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/CategoryName"
                android:text="@string/item_name" />

            <TextView
                style="@style/CategoryName"
                android:layout_marginTop="@dimen/general_margin"
                android:text="@string/item_price" />

            <TextView
                style="@style/CategoryName"
                android:layout_marginTop="@dimen/general_margin"
                android:text="@string/supplierName" />

            <TextView
                style="@style/CategoryName"
                android:layout_marginTop="@dimen/general_margin"
                android:text="@string/supplierEmail" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditText"
                android:hint="@string/hintName"
                android:inputType="textCapWords" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/EditText"
                    android:hint="@string/hintPrice"
                    android:inputType="numberDecimal" />

                <TextView
                    style="@style/TextCurrency"
                    android:text="@string/currency" />

            </RelativeLayout>

            <EditText
                android:id="@+id/supplier_name"
                style="@style/EditText"
                android:hint="@string/hintSupplierName"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/supplier_email"
                style="@style/EditText"
                android:hint="@string/hintSupplierEmail"
                android:inputType="textEmailAddress" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_minus"
            style="@style/buttonMin"
            android:onClick="decrement"
            android:text="@string/minus" />

        <TextView
            android:id="@+id/edit_quantity_text_view"
            style="@style/quantityProd"
            android:hint="0" />

        <Button
            android:id="@+id/button_plus"
            style="@style/buttonPlus"
            android:onClick="increment"
            android:text="@string/plus" />
    </LinearLayout>

    <Button
        android:id="@+id/button_order"
        style="@style/orderButton"
        android:onClick="order"
        android:text="@string/orderMore" />

</LinearLayout>
