<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ListItem">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <RelativeLayout
        android:id="@+id/item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/general_margin"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_product"
            style="@style/ProdName"
            android:text="@string/dummyDataName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/text_product"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/CurrencyText"
                android:text="@string/currency" />

            <TextView
                android:id="@+id/text_product_price"
                style="@style/ProdPrice"
                android:text="@string/dummyDataPrice" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/text_product"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_product_quantity"
                style="@style/ProdQuantity"
                android:text="5" />

            <TextView
                style="@style/AvailableText"
                android:text="@string/availableProduct" />

        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/buy"
        style="@style/BuyNow"
        android:src="@drawable/ic_action_cart" />

</LinearLayout>